cabal-version:       >=1.10
name:                cur
version:             0.1.0.0
synopsis:            CAD for Haskell
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Spencer Tipping
maintainer:          spencer.tipping@gmail.com
copyright:           Copyright (C) 2019, Spencer Tipping and Joyce Tipping
category:            CAD
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable cur
  main-is:             CurShell.hs
  build-depends:       base >= 4.9
                     , bytestring
                     , gloss
                     , hinotify
                     , hint
                     , hmatrix
                     , linear
                     , units
                     , units-defs
                     , utf8-string

  default-language:    Haskell2010
