cabal-version:       >=1.10
name:                cur
version:             0.1.0.0
synopsis:            CAD for Haskell
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Spencer Tipping
maintainer:          spencer.tipping@gmail.com
copyright:           Copyright (C) 2019, Spencer Tipping and Joyce Tipping
category:            CAD
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable cur
  main-is:             CurShell.hs
  other-modules:       CurShell.Compiler
                     , CurShell.Event
                     , CurShell.Render
                     , CurShell.View
  ghc-options:         -O3
  build-depends:       base >= 4.9
                     , cur
                     , bytestring
                     , clock
                     , containers >= 0.6.0.1
                     , gloss
                     , hinotify
                     , hint
                     , hmatrix
                     , linear
                     , microlens
                     , microlens-th
                     , mtl
                     , text >= 1.2.3.1
                     , units
                     , units-defs
                     , utf8-string

  default-language:    Haskell2010

library
  ghc-options:         -O3
  hs-source-dirs:      src
  build-depends:       base >= 4.9
                     , containers >= 0.6.0.1
                     , gloss
                     , hmatrix
                     , linear
                     , microlens
                     , microlens-th
                     , mtl
                     , text
  exposed-modules:     Cur
  default-language:    Haskell2010