cabal-version:       >=1.10
name:                wumber
version:             0.1.0.0
synopsis:            CAD for Haskell
-- description:
license:             AGPL-3
license-file:        LICENSE
author:              Spencer Tipping
maintainer:          spencer.tipping@gmail.com
copyright:           Copyright (C) 2019, Spencer Tipping and Joyce Tipping
category:            CAD
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md


-- CAD engine
library
  ghc-options:         -O2
  hs-source-dirs:      wumber
  default-language:    Haskell2010
  build-depends:       array
                     , base >= 4.9
                     , binary >= 0.8.6.0
                     , bytestring
                     , containers >= 0.6.0.1
                     , deepseq >= 1.4.4.0
                     , gloss
                     , hmatrix
                     , hmatrix-gsl
                     , linear
                     , microlens
                     , microlens-th
                     , mtl
                     , parallel
                     , random
                     , text
                     , vector >= 0.12.0.3
  exposed-modules:     Wumber
                     , Wumber.AMD64Asm
                     , Wumber.AMD64RE
                     , Wumber.Assembler
                     , Wumber.BoundingBox
                     , Wumber.ClosedComparable
                     , Wumber.Constraint
                     , Wumber.ConstraintSolver
                     , Wumber.ConstraintSimplify
                     , Wumber.DualContour
                     , Wumber.GeometricConstraints
                     , Wumber.Cursor
                     , Wumber.Element
                     , Wumber.JIT
                     , Wumber.JITIR
                     , Wumber.Numeric
                     , Wumber.Symbolic


test-suite wumber-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -O2 -threaded -with-rtsopts=-N
  default-language:    Haskell2010
  hs-source-dirs:      test/wumber
  main-is:             WumberTest.hs
  other-modules:       WumberTest.AMD64Asm
                     , WumberTest.ConstraintSolver
                     , WumberTest.JIT
  build-depends:       base >= 4.12
                     , binary
                     , bytestring
                     , containers
                     , generic-random
                     , linear
                     , microlens >= 0.4
                     , process
                     , QuickCheck
                     , unix
                     , utf8-string
                     , vector
                     , wumber


benchmark wumber-bench
  type:                exitcode-stdio-1.0
  ghc-options:         -O3 -threaded -with-rtsopts=-N
  default-language:    Haskell2010
  hs-source-dirs:      bench/wumber
  main-is:             WumberBench.hs
  other-modules:       WumberBench.BoundingBox
                     , WumberBench.Contour
                     , WumberBench.HandcodedFns
                     , WumberBench.HintLoad
  build-depends:       base >= 4.12
                     , bytestring
                     , criterion >= 1.5.6.0
                     , hint
                     , linear
                     , microlens >= 0.4
                     , process
                     , QuickCheck
                     , vector
                     , wumber


-- IDE
executable wumber
  hs-source-dirs:      shell
  main-is:             WumberShell.hs
  other-modules:       WumberShell.Compiler
                     , WumberShell.Event
                     , WumberShell.Render
                     , WumberShell.View
  ghc-options:         -O2 -threaded -with-rtsopts=-N -rtsopts
  default-language:    Haskell2010
  build-depends:       base >= 4.9
                     , binary >= 0.8.6.0
                     , bytestring
                     , clock
                     , containers >= 0.6.0.1
                     , criterion >= 1.5.6.0
                     , deepseq >= 1.4.4.0
                     , gloss
                     , hinotify
                     , hint
                     , hmatrix
                     , linear
                     , microlens
                     , microlens-th
                     , mtl
                     , random
                     , text >= 1.2.3.1
                     , utf8-string
                     , vector
                     , wumber