cabal-version:       >=1.10
name:                wumber
version:             0.1.0.0
synopsis:            CAD for Haskell
-- description:
license:             AGPL-3
license-file:        LICENSE
author:              Spencer Tipping
maintainer:          spencer.tipping@gmail.com
copyright:           Copyright (C) 2019, Spencer Tipping and Joyce Tipping
category:            CAD
build-type:          Simple
extra-source-files:  README.md


-- CAD engine
library
  ghc-options:         -O2
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >= 4.9
                     , binary >= 0.8.6.0
                     , bytestring
                     , clock
                     , containers >= 0.6.0.1
                     , cryptohash-sha256
                     , directory
                     , gloss
                     , hinotify
                     , hint
                     , hmatrix
                     , hmatrix-gsl
                     , linear
                     , microlens
                     , microlens-th
                     , mtl
                     , template-haskell
                     , text >= 1.2.3.1
                     , unix
                     , utf8-string
                     , vector >= 0.12.0.3
                     , zlib >= 0.6.2

  exposed-modules:     Wumber
                     , Wumber.AlgebraicSymFn
                     , Wumber.AMD64Asm
                     , Wumber.AMD64JIT
                     , Wumber.AMD64RE
                     , Wumber.Assembler
                     , Wumber.BitSet
                     , Wumber.BoundingBox
                     , Wumber.ClosedComparable
                     , Wumber.Constraint
                     , Wumber.ConstraintSimplify
                     , Wumber.ConstraintSolver
                     , Wumber.ConstraintSplit
                     , Wumber.Cursor
                     , Wumber.DualContour
                     , Wumber.Element
                     , Wumber.Fingerprint
                     , Wumber.Functionable
                     , Wumber.GeometricConstraints
                     , Wumber.JIT
                     , Wumber.JITIR
                     , Wumber.Macros
                     , Wumber.Model
                     , Wumber.ModelAffine
                     , Wumber.ModelCSG
                     , Wumber.Numeric
                     , Wumber.Symbolic
                     , Wumber.SymbolicAlgebra
                     , Wumber.SymbolicDerivative
                     , Wumber.SymbolicJIT
                     , Wumber.SymExpr
                     , Wumber.SymMath
                     , Wumber.VectorConversion

                     , WumberShell
                     , WumberShell.Compiler
                     , WumberShell.ComputedCache
                     , WumberShell.Event
                     , WumberShell.Render
                     , WumberShell.View


executable wumber-examples
  hs-source-dirs:      example
  main-is:             Example.hs
  other-modules:       Iso
  ghc-options:         -O2 -threaded -with-rtsopts=-N -rtsopts
  default-language:    Haskell2010
  build-depends:       base >= 4.9
                     , linear
                     , wumber


test-suite wumber-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -O2 -threaded -with-rtsopts=-N
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             WumberTest.hs
  other-modules:       WumberTest.AMD64Asm
                     , WumberTest.BitSet
                     , WumberTest.ConstraintSolver
                     , WumberTest.JIT
                     , WumberTest.ModelAffine
                     , WumberTest.Symbolic
  build-depends:       base >= 4.12
                     , binary
                     , bytestring
                     , containers
                     , generic-random
                     , linear
                     , microlens >= 0.4
                     , mtl
                     , process
                     , QuickCheck
                     , unix
                     , utf8-string
                     , vector
                     , wumber


benchmark wumber-bench
  type:                exitcode-stdio-1.0
  ghc-options:         -O3 -threaded -with-rtsopts=-N
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             WumberBench.hs
  other-modules:       WumberBench.BoundingBox
                     , WumberBench.Contour
                     , WumberBench.HandcodedFns
                     , WumberBench.HintLoad
                     , WumberBench.JIT
  build-depends:       base >= 4.12
                     , bytestring
                     , containers
                     , criterion >= 1.5.6.0
                     , deepseq
                     , hint
                     , linear
                     , microlens >= 0.4
                     , process
                     , QuickCheck
                     , vector
                     , wumber